<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            style="@style/Widget.Material3.BottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:backgroundTint="@color/text_color_black"
            app:fabAlignmentMode="center"
            app:fabCradleMargin="10dp"
            app:fabCradleRoundedCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:navigationIcon="@drawable/ic_menu"
            tools:ignore="BottomAppBar" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="Acción principal"
            android:src="@drawable/bank_icon_5"
            app:layout_anchor="@id/bottomAppBar"
            app:layout_anchorGravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="35dp"
            app:maxImageSize="30dp"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/bienvenida_card"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/text_color_black">

            <LinearLayout
                android:id="@+id/layout_bienvenida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/bank_icon">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/user_icon" />

                <TextView
                    android:id="@+id/bienvenido_usuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="7dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/welcome_bank"
                    android:textColor="@color/text_color_black"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/bank_icon"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <!-- Futuro boton para entrar al MainActivity
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"

               android:layout_marginBottom="170dp"
               app:layout_constraintTop_toBottomOf="@+id/layout_bienvenida">


               <Button
                   android:id="@+id/enter_button"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="70dp"
                   android:layout_marginRight="70dp"
                   android:fontFamily="@font/inter_medium"
                   android:text="@string/entrar"
                   android:textSize="27dp" />

           </LinearLayout>
           -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/bienvenida_card">



        <Button
            android:id="@+id/posicion_global"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/posicion_global"
            android:layout_marginBottom="5dp"
            android:textSize="22dp" />

        <Button
            android:id="@+id/movimientos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/movimientos"
            android:layout_marginBottom="5dp"
            android:textSize="22dp" />

        <Button
            android:id="@+id/transferencias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/transferencias"
            android:layout_marginBottom="5dp"
            android:textSize="22dp" />

        <Button
            android:id="@+id/cambiar_contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/cambiar_contrasena"
            android:layout_marginBottom="5dp"
            android:textSize="22dp" />

        <Button
            android:id="@+id/promociones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/promociones"
            android:layout_marginBottom="5dp"
            android:textSize="22dp" />

        <Button
            android:id="@+id/cajeros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/cajeros"
            android:layout_marginBottom="5dp"
            android:textSize="22dp" />

        <Button
            android:id="@+id/salir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/exit"
            android:layout_marginBottom="65dp"
            android:textSize="22dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>